--- a/prepros.config
+++ b/prepros.config
@@ -77,7 +77,7 @@
       "timeout": 20000,
       "autoUpload": false,
       "reuseConnection": true,
-      "connectionType": "ftp",
+      "connectionType": "sftp",
       "history": []
     },
     "packages": {
